# Plasma-Wallpaper-DreamDesktop

./: CHANGELOG  CMakeLists.txt  README.ENGLISH  README.POLSKI  README.md  dreamdesktop.cpp  dreamdesktop.desktop  dreamdesktop.h  dreamdesktop.ui
cmake/modules/: FindFFmpeg.cmake
thumbs/: CMakeLists.txt
